# gen-playground

./: .gitignore  README.md  dataset.ipynb  diffusion.ipynb  gan.ipynb  hello.ipynb  pyproject.toml  train.ipynb  vae.ipynb  vq-vae.ipynb
src/genpg/: dataset.py  hello.py  model.py  notebook.py  utils.py
