[project]
name = "genpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pillow>=11.0.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "ruff>=0.7.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
